change: title and topics

--- a/articles/57c2a141d318d3.md
+++ b/articles/57c2a141d318d3.md
@@ -1,8 +1,8 @@
 ---
-title: "アプリのバージョンニングの自動化方法と運用について考える"
+title: "【Flutter】アプリのバージョンニングの自動化方法と運用について考える"
 emoji: "⤴️"
 type: "tech"
-topics: ["flutter"]
+topics: ["flutter", "dart"]
 published: true
 ---
 
