fix: 文章を修正

--- a/articles/d793a91223e209.md
+++ b/articles/d793a91223e209.md
@@ -33,7 +33,7 @@ https://www.youtube.com/watch?v=ufb4gIPDmEs
 実装したSliderのデザイン要件は以下でした
 
 * tick markの始点と終点をtrackの両端から何pxかずらして描画する
-* 標準のtick markを表示せず、trackの下に独自のラベルつきのtickを表示する
+* 標準のtick markを表示せず、trackの下に独自のラベルつきのtick markを表示する
 
 ![](/images/d793a91223e209/slider_custom_design.png)
 
@@ -41,7 +41,7 @@ https://www.youtube.com/watch?v=ufb4gIPDmEs
 
 標準のSliderでは実現が難しいです
 また、3rdパーティパッケージで解決する方法もあります
-例えば[syncfusion_flutter_sliders](https://pub.dev/packages/syncfusion_flutter_sliders)のようなリッチなUIパッケージがありますが、商用利用の場合は金銭的なコストがかかってしまいます
+例えば[syncfusion_flutter_sliders](https://pub.dev/packages/syncfusion_flutter_sliders)のようなリッチなUIパッケージがありますが、商用パッケージのため金銭的なコストがかかってしまいます
 
 他のパッケージ群もメンテナンスが活発なものがあまりなく、今回は自作の方向で検討しました
 
@@ -120,13 +120,14 @@ https://github.com/flutter/flutter/blob/f159b58f96e4bc4f97666b6c76127015268373e3
 
 isDiscreteでdivisionsに0以上が与えられているかで、tick markの計算ロジックを実行するか分岐しています
 
+この式でpaddingを引いた実際のtrack幅を算出しています
+
 ```dart
 final double discreteTrackPadding = trackRect.height;
 final double adjustedTrackWidth = trackRect.width - discreteTrackPadding;
 ```
 
-この式でpaddingを引いた実際のtrack幅を算出しています
-
+divisionsの数に応じて、track幅に対するtick markごとの位置の比率を計算し、trackのpaddingを両端で割った分を足してx座標を求め、ループで描画しています
 
 ```dart
         final double dy = trackRect.center.dy;
@@ -149,8 +150,6 @@ final double adjustedTrackWidth = trackRect.width - discreteTrackPadding;
           );
         }
 ```
-
-divisionsの数に応じて、track幅に対するtick markごとの位置の比率を計算し、trackのpaddingを両端で割った分を足してx座標を求め、ループで描画しています
 
 ※ フレームワーク側にはdivisionsを多く設定してtick markが密集した時の対策として、以下の条件式が実装に含まれています
 
@@ -182,7 +181,7 @@ Sliderに対してずらしたpaddingを設定しているので、自作tick ma
 * SliderThemeDataとカスタムShapeクラスを活用
 * Flutterフレームワークの内部実装を参考にtick markの配置ロジックを模倣
 
-もちろん、安定した3rdパーティパッケージがあればそれを使うのが最善ですが、要件を満たすパッケージがない場合でも、Flutterはデザインのカスタムに強いUIフレームワークな点を改めて感じました
+もちろん、安定した3rdパーティパッケージがあればそれを使うのが最善ですが、要件を満たすパッケージがない場合でも、Flutterのデザインカスタマイズの柔軟性を改めて実感しました
 
 特にAIエージェントの活用により、数千行のフレームワークコードから必要なロジックを効率的に見つけ出すことができ、実装のハードルが大きく下がりました
 
