--- a/articles/d793a91223e209.md
+++ b/articles/d793a91223e209.md
@@ -3,7 +3,7 @@ title: "独自デザインSliderを頑張りたい人へ"
 emoji: "🎢"
 type: "tech" 
 topics: ["flutter", "dart"]
-published: false
+published: true
 ---
 
 直近、デザインシステムに基づいた独自デザインのSliderを実装しました
