fix: 一部文章とタイトルを変更

--- a/articles/d793a91223e209.md
+++ b/articles/d793a91223e209.md
@@ -1,5 +1,5 @@
 ---
-title: "独自デザインSliderを頑張りたい人へ"
+title: "独自デザインSliderを頑張りたい人へ【SliderThemeData】"
 emoji: "🎢"
 type: "tech" 
 topics: ["flutter", "dart"]
@@ -8,7 +8,7 @@ published: true
 
 直近、デザインシステムに基づいた独自デザインのSliderを実装しました
 標準Widgetとは地味に異なるポイントが多々あるデザインで実装が大変でしたが、ゴリ押しで自作すれば結局なんとかなるのがFlutterのいいところです
-その工夫を共有する記事になります
+Sliderのカスタムで実現できることとその工夫を共有します
 
 # 前提と先に共有
 
